# adhikaar

./: .gitignore  JUDGE_QA.md  PLAN.md  PROJECT_GUIDE.md  README.md  docker-compose.yml  render.yaml  vercel.json
agent/: .dockerignore  .env.example  .gitignore  Dockerfile  __main__.py  livekit.toml  livekit.yaml  pyproject.toml  requirements.txt
agent/src/: agent.py
agent/src/data/: schemes.json
automation/: fill_form.legacy.py  smart_fill.py
automation/mock-portal/: index.html
frontend/: .env.example  Dockerfile  README.md  components.json  next.config.ts  package-lock.json  package.json  vercel.json
frontend/src/app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/src/app/api/ocr/: route.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/app/schemes/: page.tsx
frontend/src/components/: WelfareGraph.tsx  agent-chat-transcript.tsx  agent-control-bar.tsx  agent-track-control.tsx  agent-track-toggle.tsx
frontend/src/components/chat/: ChatInterface.tsx  ChatSidebar.tsx  VoiceCall.tsx
frontend/src/components/landing/: Hero.tsx
frontend/src/components/reactbits/: BlurText.tsx  ClickSpark.tsx  CountUp.tsx  DecryptedText.tsx  FlowingMenu.css  FlowingMenu.tsx  GradualBlur.tsx  Magnet.tsx  ScrollVelocity.tsx  ShinyText.tsx  SpotlightCard.tsx
frontend/src/lib/: applications.ts  gemini.ts  i18n.ts  llm.ts  myscheme.ts  prompts.ts  rate-limit.ts  sarvam.ts  schemes.ts  tigergraph.ts  types.ts  whatsapp-sessions.ts  whatsapp.ts
frontend/src/types/: speech.d.ts
scripts/tigergraph/: ingest_myscheme.py  queries.gsql  schema.gsql
(+20 files in other folders)
