[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adhikaar-voice-agent"
version = "1.0.0"
description = "Adhikaar — AI Welfare Concierge voice agent powered by LiveKit + Gemini"
requires-python = ">=3.10, <3.15"

dependencies = [
    "livekit-agents[silero,turn-detector,google]~=1.4",
    "livekit-plugins-noise-cancellation~=0.2",
    "python-dotenv",
    "playwright",
    "pyTigerGraph",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
